--- a/src/main/resources/templates/page/home.html
+++ b/src/main/resources/templates/page/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,6 +8,6 @@
     <title>Página inicial</title>
 </head>
 <body>
-
+<h1 th:text="${Usuario.getNome()}"></h1>
 </body>
 </html>
