--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -18,19 +18,15 @@
 </head>
 <body>
 <section class="d-flex">
-    <div class="left-content container text-bg-dark">
-        <div class="dashboard">
-            <div class="text-center" style="margin-top: 5rem">
-                <img th:src="@{/img/UCM.gif}" alt="">
-                <h1>Plataforma de Votação Estudantil da Universidade Católica de Moçambique</h1>
-                <h4>Faculdade de Economia e Gestão</h4>
-            </div>
+    <div class="left-content">
+        <div class="dashboard container text-bg-dark">
         </div>
     </div>
     <div class="right-content">
-        <form class="login container" th:action="@{/login}" method="Post">
+
+        <form class="login container" action="/admin/login" method="Post">
             <div class="container w-75">
-                <h2>Login</h2>
+                <h2>Login ADMIN</h2>
                 <div class="d-flex flex-column gap-4">
                     <div class="d-flex flex-column gap-2">
                         <label>Endereço de Email</label>
@@ -38,7 +34,6 @@
                                 type="email"
                                 class="form-control"
                                 name="email"
-                                placeholder="70000000@ucm.ac.mz"
                         />
                     </div>
 
@@ -48,23 +43,11 @@
                                 type="password"
                                 class="form-control"
                                 name="senha"
-                                placeholder="**********"
-                                min="8"
-                                minlength="8"
                         />
                     </div>
 
                     <button class="btn text-bg-dark">Login</button>
                     <div class="alert alert-danger" role="alert" id="wrong_password">
-                        <p th:text="${DataError}" id="wrong_password_text"></p>
-                    </div>
-                    <div class="d-flex gap-lg-5">
-                        <p>
-                            Não tem uma conta? &nbsp;<span class="text-primary"> <a
-                                th:href="@{/pages/registro}">Crie já</a> </span>
-                        </p>
-                        <a th:href="@{/pages/recuperarpass}"> <span
-                                class="text-primary">Esqueceu a palavra passe?</span> </a>
                     </div>
                 </div>
             </div>
