--- a/src/main/resources/templates/pages/gerente/community.html
+++ b/src/main/resources/templates/pages/gerente/community.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="76x76" href="../../static/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../../static/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="../../../static/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="../../../static/img/favicon.png">
     <title>
         Plataforma de Votação
     </title>
@@ -28,7 +28,6 @@
            aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html "
            target="_blank">
-            <img src="../../static/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
             <span class="ms-1 font-weight-bold">Plataforma de Votação</span>
         </a>
     </div>
@@ -199,7 +198,7 @@
                                     <th class="text-secondary opacity-7"></th>
                                 </tr>
                                 </thead>
-                                <form id="votoForm" action="/estudante/criar-votacao" method="post">
+                                <form action="/estudante/criar-votacao" method="post">
                                     <tbody>
                                     <tr>
                                         <td>
@@ -232,11 +231,11 @@
     </div>
 </main>
 <!--   Core JS Files   -->
-<script src="../../static/js/core/popper.min.js"></script>
+<script src="../../../static/js/core/popper.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="../../static/js/core/bootstrap.min.js"></script>
-<script src="../../static/js/plugins/perfect-scrollbar.min.js"></script>
-<script src="../../static/js/plugins/smooth-scrollbar.min.js"></script>
+<script src="../../../static/js/core/bootstrap.min.js"></script>
+<script src="../../../static/js/plugins/perfect-scrollbar.min.js"></script>
+<script src="../../../static/js/plugins/smooth-scrollbar.min.js"></script>
 
 </body>
 
