--- a/src/main/resources/templates/pages/gerente/profile.html
+++ b/src/main/resources/templates/pages/gerente/profile.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../../static/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../../static/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../../static/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../../../static/img/favicon.png">
   <title>
    Perfil - Plataforma de votação
   </title>
@@ -27,7 +27,6 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html " target="_blank">
-          <img src="../../static/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
           <span class="ms-1 font-weight-bold">Plataforma de Votação</span>
         </a>
     </div>
@@ -139,7 +138,7 @@
           </div>
           <ul class="navbar-nav justify-content-end">
             <li class="nav-item d-flex align-items-center">
-              <a href="javascript:;" class="nav-link text-white font-weight-bold px-0">
+              <a th:href="@{/pages/profile}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none" th:text="${session.Username.getNome()}"></span>
               </a>
@@ -204,7 +203,9 @@
                 <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Nome Completo:</strong> &nbsp;<span th:text="${session.Username.getNome()}"></span></li>
                 <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp; <span th:text="${session.Username.getEmail()}"></span></li>
                 <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Sexo:</strong> &nbsp; <span th:text="${session.Username.getSexo()}"></span></li>
+                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Turno:</strong> &nbsp; <span th:text="${session.Username.getTurnoEstudante()}"></span></li>
                 <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Ano:</strong> &nbsp; <span th:text="${session.Username.getAnoEstudante()}"></span></li>
+                <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Curso:</strong> &nbsp; <span th:text="${cursoEstudante}"></span></li>
                 <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Data de Registro:</strong> &nbsp; <span th:text="${session.Username.getDataRegistro()}"></span></li>
               </ul>
             </div>
@@ -235,7 +236,6 @@
                             class="form-control"
                             name="nome"
                             th:value="${session.Username.getNome()}"
-                            placeholder="João Carlos"
                     />
                   </div>
                   <div class="d-flex flex-column gap-2">
@@ -245,7 +245,6 @@
                             class="form-control"
                             name="email"
                             th:value="${session.Username.getEmail()}"
-                            placeholder="70000000@ucm.ac.mz"
                     />
                   </div>
                   <div class="d-flex flex-column gap-2">
@@ -254,7 +253,6 @@
                             type="password"
                             class="form-control"
                             name="senha"
-                            th:value="${session.Username.getSenha()}"
                             placeholder="**********"
                     />
                   </div>
