--- a/src/main/resources/templates/pages/admin/profileAdmin.html
+++ b/src/main/resources/templates/pages/admin/profileAdmin.html
@@ -19,7 +19,6 @@
   <link  th:href="@{/css/nucleo-svg.css}" rel="stylesheet" />
   <!-- CSS Files -->
   <link id="pagestyle"  th:href="@{/css/soft-ui-dashboard.min.css}" rel="stylesheet" />
-  <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
 </head>
 
 <body class="g-sidenav-show bg-gray-100">
@@ -34,7 +33,7 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link"  th:href="@{/dashboard}">
+          <a class="nav-link"  th:href="@{/admin/}">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 45 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>shop </title>
