--- a/src/main/resources/templates/pages/admin/adicionarAdmin.html
+++ b/src/main/resources/templates/pages/admin/adicionarAdmin.html
@@ -90,16 +90,9 @@
                   <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
                   </div>
-                  <div class="form-check form-check-info text-left">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                    <label class="form-check-label" for="flexCheckDefault">
-                      I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
-                    </label>
-                  </div>
                   <div class="text-center">
-                    <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
+                    <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">Adicionar</button>
                   </div>
-                  <p class="text-sm mt-3 mb-0">Already have an account? <a href="javascript:;" class="text-dark font-weight-bolder">Sign in</a></p>
                 </form>
               </div>
             </div>
