--- a/src/main/resources/templates/adminLogin.html
+++ b/src/main/resources/templates/adminLogin.html
@@ -20,6 +20,11 @@
 <section class="d-flex">
     <div class="left-content">
         <div class="dashboard container text-bg-dark">
+            <div class="text-center">
+                <img th:src="@{/img/UCM.gif}" alt="">
+                <h1>Plataforma de Votação Estudantil da Universidade Católica de Moçambique</h1>
+                <h4>Faculdade de Economia e Gestão</h4>
+            </div>
         </div>
     </div>
     <div class="right-content">
@@ -47,8 +52,6 @@
                     </div>
 
                     <button class="btn text-bg-dark">Login</button>
-                    <div class="alert alert-danger" role="alert" id="wrong_password">
-                    </div>
                 </div>
             </div>
         </form>
