--- a/src/main/resources/templates/pages/admin/adicionarAdmin.html
+++ b/src/main/resources/templates/pages/admin/adicionarAdmin.html
@@ -25,7 +25,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3 navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="../pages/dashboard.html">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white">
         Plataforma de Votação
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,18 +80,27 @@
           <div class="col-xl-4 col-lg-5 col-md-7 mx-auto">
             <div class="card z-index-0">
               <div class="card-body">
-                <form>
+                <form action="/admin/criar" method="post">
                   <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Name" aria-label="Name" aria-describedby="email-addon">
+                    <input type="text" class="form-control" placeholder="Name" aria-label="Name" aria-describedby="email-addon" name="nome">
                   </div>
                   <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                    <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon" name="email">
                   </div>
-                  <div class="mb-3">
-                    <input type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="password-addon">
+                  <div class="d-flex mb-3 gap-5">
+                    <div>
+                      <select name="sexo" class="form-control">
+                        <option selected disabled>Sexo</option>
+                        <option value="Feminino">Feminino</option>
+                        <option value="Masculino">Masculino</option>
+                      </select>
+                    </div>
+                    <div>
+                      <input type="text" class="form-control" name="cargoAdmin" placeholder="O cargo do admin" required >
+                    </div>
                   </div>
                   <div class="text-center">
-                    <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">Adicionar</button>
+                    <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Adicionar</button>
                   </div>
                 </form>
               </div>
